# harmony-cams

./: .clangd  .gitignore  build-profile.json5  check_encoding.ps1  convert_encoding.ps1  harmony_push.bat  hvigorfile.ts  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
_ref/app-nvr/: build.gradle.kts
_ref/app-nvr/src/main/: AndroidManifest.xml
entry/: build-profile.json5  hvigorfile.ts  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  video_encoder_engine.cpp  video_encoder_engine.h
entry/src/main/cpp/types/rtspencoder/: Index.d.ts  oh-package.json5
entry/src/main/ets/components/: BrowseScreen.ets  DeviceManageComponents.ets  NvrDialogComponents.ets  NvrSecondaryScreens.ets  NvrShellComponents.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: BrowseModels.ets  CameraDevice.ets  RecordingFile.ets
entry/src/main/ets/pages/: MainPage.ets
entry/src/main/ets/theme/: NvrTheme.ets
entry/src/main/ets/utils/: BrowsePersistence.ets  CameraHealthChecker.ets  CameraStreamManager.ets  DatabaseHelper.ets  I18nUtils.ets  NetworkDiscoveryService.ets  NetworkUtils.ets  OnvifDiscovery.ets  PlaybackModels.ets  PrefStore.ets  RtmpPushManager.ets  RtspServer.ets  StorageManager.ets  StreamConfig.ets  VideoStreamManager.ets
hvigor/: hvigor-config.json5
sign/: passwords.json
sign/debug/: debug.cer  debug.p12  debug.p7b
sign/release/: razorRelease.p7b  sufei.cer
(+45 files in other folders)
